--- a/exercises/preamble.tex
+++ b/exercises/preamble.tex
@@ -5,7 +5,7 @@
 \pagestyle{plain}
 
 \usepackage{etex}
-%\usepackage[letterpaper,hmargin=1in,vmargin=1in]{geometry}
+\usepackage[letterpaper,hmargin=1in,vmargin=1in]{geometry}
 \usepackage{framed}
 \usepackage{cite}
 \usepackage[hidelinks]{hyperref}
@@ -41,3 +41,4 @@
 \usepackage{boldline}
 \usepackage{array}
 \usepackage{pifont}
+
