Addressed proofreader comments and markup comments

--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -1,4 +1,4 @@
-% This is the bibliography. 
+% This is the bibliography.
 %
 % I use the following styles, whenever possible:
 
@@ -6,9 +6,9 @@
 %   of title (all letters lower case).  In case of ambiguity can deviate, but pick
 %   something similar. This is based on the Google scholar approach
 %
-% - Page numbers, physical location, editors, most often omitted 
+% - Page numbers, physical location, editors, most often omitted
 % - Author names (provide full names here, not initials for first name), Title,
-%   Venue, Year included 
+%   Venue, Year included
 % - Conference names can be replaced by widely understood acronyms
 %    CRYPTO
 %    EUROCRYPT
@@ -21,7 +21,7 @@
 % - Journals one can cite in the journal format
 % - Conferences can use inproceedings format
 %
-% 
+%
 % Suggestions on bib maintenance welcome, we can refine this as we go on.
 %
 
@@ -126,7 +126,7 @@ journal = {Proceedings of the VLDB Endowment},
  year = {2015},
  acmid = {2813651},
  publisher = {ACM},
-} 
+}
 
 @InProceedings{Halevi2004EME,
 author="Halevi, Shai
@@ -157,12 +157,12 @@ publisher="Springer Berlin Heidelberg",
 @article{EvenMansour,
  title = {A Construction of a Cipher from a Single Pseudorandom Permutation},
  author = {Even, Shimon and Mansour, Yishay},
- journal = {Journal of Cryptography}, 
+ journal = {Journal of Cryptography},
  volume = {10},
  number = {3},
  year = {1997},
  url = {http://dx.doi.org/10.1007/s001459900025}
-} 
+}
 
 @article{BonehShoupBook,
  title = {A Graduate Course on Cryptography},
@@ -181,7 +181,7 @@ publisher="Springer Berlin Heidelberg",
  numpages = {12},
  url = {http://dl.acm.org/citation.cfm?id=188307.188366},
  acmid = {188366}
-} 
+}
 
 @article{CopersmithDES,
 author = {Coppersmith, D},
@@ -211,6 +211,12 @@ doi = {10.1147/rd.383.0243}
  acmid = {584093},
  publisher = {ACM},
  address = {New York, NY, USA},
-} 
+}
 
-
+@article{LubyRackoff88,
+  author    = {Michael Luby and
+               Charles Rackoff},
+  title     = {How to Construct Pseudorandom Permutations from Pseudorandom Functions},
+  journal   = {{SIAM} J. Comput.},
+  year      = {1988},
+}
