--- a/notes/prp/luby-rackoff.tex
+++ b/notes/prp/luby-rackoff.tex
@@ -1,11 +1,46 @@
 %!TEX root = ../main.tex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\paragraph{3-round Feistel network is a PRP}
-Next, we show that given PRF security of the underlying round function, a 3-round Feistel network is a PRP.
-Intuitively, the proof will follow the intuition that 3 rounds of Feistel allows the round function to properly add randomness to both $L_3 = R_2$ and $R_3$.
+\newpage
+
+\begin{wrapfigure}{r}{2.5in}
+\center
+\begin{tikzpicture}
+    \node(r0) at ($(0,0)$)  {$R_0$};
+    \node (l0) [left of = r0, node distance=3.0cm] {$L_0$};
+    \def\lastz{0}
+    \foreach \z[remember=\z as \lastz] in {1, 2,...,3} {
+      \node[draw,thick,minimum width=0.75cm] (\prf\z) [below of = r\lastz, node distance=1.1cm]  {$\prf_{\prfkey}$};
+      \node (ctr\z) [right of = \prf\z, node distance=1.25cm] {$\bm{\langle}\z\bm{\rangle}$};
+      \node (xor\z) [XOR, below of = \prf\z, node distance = 0.75cm, scale=1.0] {};
+      \node (junction0\z) [below of = r\lastz, node distance = 0.5cm] {};
+      \node (junction1\z) [below of = l\lastz, node distance = 0.75cm] {};
+      \node (junction2\z) [below of = l\lastz, node distance = 1.5cm] {};
+      \node (junction3\z) [left of = xor\z, node distance = 0.5cm] {};
+      \node (r\z) [below of = xor\z, node distance=0.75cm] {$R_\z$};
+      \node (l\z) [left of = r\z, node distance=3.0cm] {$L_\z$};
+      \path[->]
+        (r\lastz) edge[thick] node {} (\prf\z)
+        (\prf\z) edge[thick] node {} (xor\z)
+        (junction3\z.center) edge[thick] node {} (xor\z)
+        (xor\z) edge[thick] node {} (r\z)
+        (junction2\z.center) edge[thick] node {} (l\z)
+        (ctr\z) edge[thick] node {} (\prf\z.east);
+        \path[-]
+        (l\lastz.south) edge[thick] node {} (junction1\z.center)
+        (junction0\z.center) edge[thick] node {} (junction2\z.center)
+        (junction1\z.center) edge[thick] node {} (junction3\z.center);
+    }
+\end{tikzpicture}
+\caption{A 3-round Feistel network.}
+\label{fig:feistel-3}
+\end{wrapfigure}
+
+\paragraph{3-round Feistel network is a PRP.}
+Next, we show that assuming PRF security of the underlying round function, a 3-round Feistel network is a PRP.
+Intuitively, the proof will follow the intuition that 3 rounds of Feistel allows the round function to properly add randomness to both $L_3 = R_2$ and~$R_3$.
 In particular, we want to show that the output of the $\prf_{\prfkey}(\langle 2 \rangle\concat R_1)$ and $\prf_{\prfkey}(\langle 3 \rangle\concat R_2)$ cannot be effectively controlled by adversary $\advA$, i.e., $\advA$ cannot create collisions on $R_1$ and $R_2$.
 
-\begin{theorem}[Luby-Rackoff]\label{thm:luby-rackoff}
+\begin{theorem}(Luby-Rackoff Theorem~\cite{LubyRackoff88})\label{thm:luby-rackoff}
 Let $\Feistel$ be the 3-round Feistel cipher using round function
 $\prf\Colon\bits^k\times\bits^{2n}\rightarrow \bits^n$. For any
 $\PRP_\cipher$-adversary $\advA$ making at most $q$ queries
@@ -15,20 +50,23 @@ we give a $\PRF_{\prf}$-adversary $\advB$ making at most $3q$ queries such that
   \frac{q^2}{2^{2n}} \;.
 \enm
 \end{theorem}
-\scribenote{How are we doing cites? (Luby-Rackoff)}
 
 \begin{proof}
-Without loss of generality, we consider an adversary $\advA$ that only makes unique queries to oracle $\Fn$.
-\scribenote{Be more formal about why this okay?} \pfreadernote{Looking at the Boneh-Shoup explanation for this, I think it would be better to be more clear on why this is ok}
 We bound the advantage of $\PRP$ adversary $\advA$ by bounding its advantage in each game in a series of game hops.
 Pseudocode for these games is given in Figure~\ref{fig:games-luby-rackoff}.
 
-Game $\G0$ is constructed exactly as $\PRP1^{\advA}_{\Feistel}$; the oracle pseudocode expands out the computation of the 3-round Feistel network $\Feistel$:
+To simplify our analysis, we consider an adversary $\advA$ that only makes unique queries to oracle $\Fn$.
+We can make this assumption without loss of generality since we can easily construct an $\advA$ that only makes unique oracle queries from an adversary $\advA'$ that does not.
+Adversary $\advA$ is an elementary wrapper around $\advA'$ that passes along the oracle queries of $\advA'$ to its own oracle, but also maintains a table of oracle query/response pairs with which it uses to respond to duplicate queries of $\advA'$.
+Since the oracle in the PRP game is deterministic, $\advA$ perfectly simulates $\advA'$ and thus has the same advantage, $\AdvPRP{\Feistel}{\advA} = \AdvPRP{\Feistel}{\advA'}$.
+Furthermore, assuming efficient table lookups, $\advA$ is just as efficient as $\advA'$.
+
+Game $\G0$ is constructed exactly as $\PRP1^{\advA}_{\Feistel}$; the oracle pseudocode expands out the computation of the 3-round Feistel network $\Feistel$.
+We have by construction that
 \bnm
 \Prob{\PRP1_\Feistel^\advA\Rightarrow 1} = \Prob{\G0\Rightarrow 1}.
 \enm
 Game $\G1$ replaces the round function $\prf$ with a random function $\randfn$ mapping from $\braces{0,1}^{2n}\rightarrow\braces{0,1}^n$.
-\scribenote{Should PRF security game be defined with respect to different domain and range space, $m$ and $n$?}
 We bound the ability to distinguish between $\G0$ and $\G1$ by the PRF security of $\prf$.
 Consider the following PRF adversary $\advB$ which runs $\advA$ with a simulated oracle $\FnSim$.
 
@@ -49,15 +87,25 @@ $R_3 \gets L_2 \oplus \Fn(\langle 3\rangle \concat R_2)$\\
 Return $L_3 \concat R_3$
 }
 \end{center}
-\pfreadernote{Should this game be a figure?} \pfreadernote{Julia: since it's just an adversary, it's probably ok?}
+
 Adversary $\advB$ simulates $\FnSim$ by running the 3-round Feistel network but replacing the round function with a call to its own oracle $\Fn$.
-In \PRF0, where $\advB$'s oracle $\Fn$ acts as the round function $\prf$, $\advB$ runs exactly $\G0$.
-In \PRF1, where $\Fn$ acts as a random function $\rho$, $\advB$ runs exactly $\G1$.
+In \PRF1, where $\advB$'s oracle $\Fn$ acts as the round function $\prf$, $\advB$ runs exactly $\G0$.
+In \PRF0, where $\Fn$ acts as a random function $\rho$, $\advB$ runs exactly $\G1$.
 Thus, we have
 \begin{align*}
-\AdvPRF{\prf}{\advB} &= \absv*{\Prob{\PRF1_\prf^\advB\Rightarrow 1} - \Prob{\PRF0_\prf^\advB\Rightarrow1}}\\
+\AdvPRF{\prf}{\advB} &= \absv*{\Prob{\PRF0_\prf^\advB\Rightarrow 1} - \Prob{\PRF1_\prf^\advB\Rightarrow1}}\\
 &= \absv*{\Prob{\G1\Rightarrow 1} - \Prob{\G0\Rightarrow1}}.\\
 \end{align*}
+\vspace{-3em}
+
+In games $\G2$ and $\G3$, we use a similar trick to the one we used in our proof of the PRF-PRP switching lemma.
+Game $\G2$ replaces the random function $\rho$ with a lazy evaluation of a random function using a table $\TabF$.
+When the random function is queried on an input, the value in $\TabF$ keyed by the input is returned.
+If there is no such value, meaning the input has not been previously queried, a new random value is generated, returned, and stored in $\TabF$ for future queries.
+Thus, lazily building out $\TabF$ is equivalent to using random function $\rho$, and so
+\bnm
+\Prob{\G1\Rightarrow 1} = \Prob{\G2\Rightarrow 1}.
+\enm
 
 \begin{figure}[t]
 \hfpagessss{.20}{.20}{.20}{.25}{
@@ -147,16 +195,7 @@ Return $L_3 \concat R_3$
 \label{fig:games-luby-rackoff}
 \end{figure}
 
-In games $\G2$ and $\G3$, we use a similar trick to the one we used in our proof of the PRF-PRP switching lemma.
-Game $\G2$ replaces the random function $\rho$ with a lazy evaluation of a random function using a table $\TabF$.
-When the random function is queried on an input, the value in $\TabF$ keyed by the input is returned.
-If there is no such value, meaning the input has not been previously queried, a new random value is generated, returned, and stored in $\TabF$ for future queries.
-Thus, lazily building out $\TabF$ is equivalent to using random function $\rho$:
-\bnm
-\Prob{\G1\Rightarrow 1} = \Prob{\G2\Rightarrow 1}.
-\enm
-
-Game $\G3$ generates fresh random values on every input to the second and third round functions.
+Game $\G3$ generates fresh random values $X_2, X_3$ on every input to the second and third round functions.
 This is in contrast to $\G2$ where a fresh random value is only returned for inputs that have never been seen.
 Thus, the difference between $\G2$ and $\G3$ occur when repeat inputs are used with the second or third round functions, which corresponds to repeat values of $R_1$ and $R_2$, respectively.
 Intuitively, since we are only considering adversaries $\advA$ that make unique queries to $\Fn$, finding repeat values of $R_1$ and $R_2$ is hard because they both include randomness from the random function.
@@ -173,7 +212,7 @@ Thus, the probability space of $R_2$ and $R_3$ are the same and $\G4$ is identic
 \bnm
 \Prob{\G3\Rightarrow 1} = \Prob{\G4\Rightarrow 1}.
 \enm
-Importantly, this also implies
+Importantly, this also implies that
 \bnm
 \Prob{\G3 \setsbad} = \Prob{\G4 \setsbad}.
 \enm
@@ -184,7 +223,7 @@ Since we assume $\advA$ only makes unique queries to $\Fn$, $\G4$ is simulating 
 \Prob{\G4\Rightarrow 1} = \Prob{\PRF0^{\advA}_{\Feistel}\Rightarrow 1}.
 \enm
 
-And by the PRF-PRP switching lemma,
+By the PRF-PRP switching lemma (\lemref{switching-lem}),
 	\bnm
 	\absv*{\Prob{\PRF0_{\Feistel}^{\advA}\Rightarrow 1} - \Prob{\PRP0_{\Feistel}^{\advA}\Rightarrow1}} \le \frac{q^2}{2^{2n}}  \;.
 	\enm
@@ -195,24 +234,20 @@ This event can be considered as two separate events depending on where the $\bad
 denote the event that $R_1$ collides as $W_i^1$ and the event that $R_2$ collides as $W_i^2$.
 
 It is simple to bound the probability of $W_i^2$.
-The probability of $R_2 = L_1 \xor X_2$ colliding with a previous $R_2$ on query $i$ is bounded by $q/2^n$ since $X_2$ is a fresh random string. \pfreadernote{$\G4$ just samples $R_2$ randomly, not $R_2 = L_1 \xor X_2$ so it might be good to refresh the reader's memory that we're using Pr[G3 sets bad] = Pr[G4 sets bad] here. Also maybe mention union bound for how you upper bounded the probability?}
+The probability of $R_2$ colliding with a previous value on query $i$ is bounded by $i/2^n$ since $R_2$ is a fresh random string.
 
 Bounding the probability of $W_i^1$ is more nuanced.
-At first glance, it appears that the logic should follow symmetrically to that from above where $R_1 = L_0\xor X_1$ for random $X_1$.
-To bound the probability of collision to $q/2^n$, we must argue that $X_1$ is independent of the inputs to $\Fn$.
-In the previous case, $X_2$ is freshly sampled on every query to $\Fn$ so independence is trivially satisfied.
-This is not the case for $X_1$.
-However, we can argue that $\advA$'s queries are dependent only on $\advA$'s random coins and the previous outputs of $\Fn$.
-Since in $\G4$ the outputs of $\Fn$ are independently drawn random samples, we have that the inputs of $\Fn$ are independent of $X_1$.
-\scribenote{May need to argue this more formally?}
+Here, $R_1 = L_0\xor X_1$ where $X_1$ is randomly sampled.
+However, $X_1$ is not freshly randomly sampled on every call to $\Fn$, and the adversary can induce use of the same $X_1$ with repeated queries of the same $R_0$.
+To bound the probability of collision to $i/2^n$, we must argue that $X_1$ is independent of $L_0$.
+Since the $\advA$'s $L_0$ query is dependent only on $\advA$'s random coins and the previous outputs of $\Fn$ and in $\G4$ the outputs of $\Fn$ are independently drawn random samples, we have that $L_0$ is independent of $X_1$.
 
 Thus, by two applications of the union bound, we have
-\pfreadernote{specify that initial value for sum is i=1 below}
 \begin{align*}
-  \Prob{\G4 \setsbad} &\le \sum_i^q \Prob{W_i}\\
-  &\le \sum_i^q \Prob{W_i^1} + \Prob{W_i^2}\\
-  &\le \sum_i^q \frac{q}{2^n} + \frac{q}{2^n}\\
-  &= \frac{2q^2}{2^n}.
+  \Prob{\G4 \setsbad} &\le \sum_{i=1}^q \Prob{W_i}\\
+  &\le \sum_{i=1}^q \Prob{W_i^1} + \Prob{W_i^2}\\
+  &\le \sum_{i=1}^q \frac{i}{2^n} + \frac{i}{2^n}\\
+  &\le \frac{2q^2}{2^n}.
 \end{align*}
 
 Finally, to put it all together,
