--- a/notes/prp/thorp-shuffle.tex
+++ b/notes/prp/thorp-shuffle.tex
@@ -1,4 +1,4 @@
 %!TEX root = ../main.tex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\paragraph{Connection to card shuffling algorithms}
+\paragraph{Connection to card shuffling algorithms.}
 \scribenote{TODO}
