Added exercises for PRP/Luby-Rackoff

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -18,7 +18,7 @@
 \usepackage{setspace}
 \usepackage{booktabs}
 \usepackage{outlines}
-% \usepackage{enumitem}
+\usepackage{enumitem}
 \usepackage{epsfig}
 \usepackage{wrapfig}
 \usepackage{textcomp}
@@ -42,7 +42,7 @@
 \usepackage{graphicx}
 \usepackage{fancyhdr}
 \usepackage{url}
-\usepackage{enumerate}
+%\usepackage{enumerate}
 \usepackage{adjustbox}
 \usepackage{multirow}
 \usepackage[font=small]{caption}
