added Feb27 slides

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -838,7 +838,7 @@
 \newcommand{\LRKAPRPIdeal}{\text{RKA-PRP1}}
 \newcommand{\AdvLRKAPRP}[2]{\Adv^{\mathrm{\oplus \dash prp}}_{#1}(#2)}
 
-\newcommand{\AEAD}{\textnormal{\textsf{AEAD}}}
+\newcommand{\AEAD}{\textnormal{\textsf{AE}}}
 %% \newcommand{\AEADone}{\textnormal{LHAE1}}
 %% \newcommand{\AEADzero}{\textnormal{LHAE0}}
 %% \newcommand{\AEADstate}{\textnormal{sLHAE}}
