Added tikz pictures for thorp shuffles

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -28,6 +28,7 @@
 \usetikzlibrary{calc,arrows,arrows.meta,shapes,positioning,matrix,decorations.pathreplacing}
 \usepackage{amsthm}
 \usepackage{amssymb}
+\usepackage{pifont}
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \DeclareMathOperator*{\argmax}{arg\,max}
